--- a/darkheresy-i18n.html
+++ b/darkheresy-i18n.html
@@ -1875,8 +1875,8 @@
                 <div class="item" style="width:13%"><label data-i18n="temperament" >Temperament</label></div>
                 <div class="item" style="width:20%"><input name="attr_NPCtemperament" type="text" style="text-align:center"></input></div>
                 <div class="item" style="width:2%"></div><!-- spacing -->
-                <div class="item" style="width:13%"><label data-i18n="availabililty" >Availabililty</label></div>
-                <div class="item" style="width:20%"><input name="attr_NPCAvailabililty" type="text" style="text-align:center"></input></div>
+                <div class="item" style="width:13%"><label data-i18n="availability" >Availability</label></div>
+                <div class="item" style="width:20%"><input name="attr_NPCAvailability" type="text" style="text-align:center"></input></div>
             </div>
             </div>
         <input type="checkbox" class="arrow" style="width:100%;height:16px" title="Check to Hide NPC details"></input>
@@ -3769,7 +3769,7 @@ on('change:repeating_psypowers2',function(){
 <rolltemplate class="sheet-rolltemplate-custom">
     <div class="sheet-header"></div>
         <div class="sheet-content">
-            <!--section for the first line, that usually contains titles and names --
+            <!--section for the first line, that usually contains titles and names -->
             {{#name}}
                 <div class="sheet-name" data-i18n="--name--" >{{name}}</div
             {{/name}}
