Add new pictures for the rolls. Change css accordingly for http urls.

--- a/darkheresy-i18n.html
+++ b/darkheresy-i18n.html
@@ -51,7 +51,7 @@
 			<!-- Mid Column (Logo) -->
 			<div class="col">
 			    <div class="row" style="height: 45px"></div>
-			    <div class="row"><img src="https://i.imgur.com/IO1zs3a.png"></img></div>
+			    <div class="row"><img src="https://github.com/mleverge/darkheresy/blob/main/pictures/logo.png?raw=true"></img></div>
 			</div>
 			<!-- Right Column  -->   
 			<div class="col">
